Include common chunks plugin in webpack

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,38 @@
 <!doctype html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ángel Marqués - PHP Symfony Developer</title>
-    <link rel="stylesheet" href="dist/styles.css">
+    <link rel="stylesheet" href="./dist/styles.css">
 
 </head>
+
 <body>
     <div class="container">
         <div class="row">
-            <div class="col">1 Test</div>
+            <div class="col">
+                <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+                    Tooltip on top
+                </button>
+            </div>
             <div class="col">2</div>
             <div class="col">3</div>
         </div>
+
+        <div class="row">
+            <div class="col">
+                Icon FA
+                <i class="fa fa-fw fa-paperclip text-primary red"></i>
+            </div>
+        </div>
     </div>
+
+    <script src="./dist/manifest.js"></script>
+    <script src="./dist/layout.js"></script>
+    <script src="./dist/app.js"></script>
 </body>
+
 </html>
